--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -21,7 +21,7 @@ spring:
   jpa:
     generate-ddl: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
