Dockerfile, docker-compose.yml 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,5 +2,9 @@ version: '3.8'
 services:
   webserver:
     image: kwangko/oauth:v1.0
+#    build:
+#      context: .
+#      dockerfile: Dockerfile  # Specify the Dockerfile name if it's not named 'Dockerfile'
     ports:
       - "9090:9090"
+    restart: always
